opam-version: "2.0"
maintainer: "ckeller@lmf.cnrs.fr"
homepage: "https://framagit.org/formaldata/sqlformalsemantics"
dev-repo: "git+https://framagit.org/formaldata/sqlformalsemantics.git"
bug-reports: "https://framagit.org/formaldata/sqlformalsemantics/-/issues"
authors: ["Véronique Benzaken <veronique.benzaken@universite-paris-saclay.fr>"
          "Évelyne Contejean <evelyne.contejean@universite-paris-saclay.fr>"
]
license: "CC-BY-NC-ND-4.0"
build: [
  [make "-j%{jobs}%"]
]
install: [
  [make "install"]
]
depends: [
  "coq" {= "8.11.2"}
]
tags: [
  "category:Miscellaneous/Coq Extensions"
  "keyword:databases"
  "keyword:queries"
  "keyword:relational"
  "keyword:compiler"
  "logpath:SQLFormalSemantics"
]
synopsis: "A Coq mechanized executable formal semantics for realistic SQL queries"
description: """
SQLFormalSemantics is a Coq mechanized executable formal semantics for realistic SQL queries
"""
url {
  src: "git+https://framagit.org/formaldata/sqlformalsemantics.git"
}
